--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-07  Matthew Allum,,,  <mallum@handhelds.org>
+
+	* configure.ac:
+	fix --enable-pda-folders gubbins
+
 2004-02-03  Matthew Allum, mallum@handhelds.org
 
 	* matchbox-session:
