--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-06  Matthew Allum,,,  <mallum@openedhand.com>
+
+	* Makefile.am:
+	Add snapshot target
+
+2004-02-10 Matchbox-common-0.8 released - RELEASE_0_8 tag
+
 2004-02-07  Matthew Allum,,,  <mallum@handhelds.org>
 
 	* configure.ac:
