--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-04  mallum,,,  <mallum@openedhand.com>
+
+	* configure.ac:
+	Bump up version to 0.9
+
 2004-04-06  Matthew Allum,,,  <mallum@openedhand.com>
 
 	* Makefile.am:
