--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-11  mallum,,,  <mallum@openedhand.com>
+
+	* icons/mbnoapp.xpm:
+	Add new mbnoapp icon and improved 32x32 mbmenu icon 
+
 2005-01-04  mallum,,,  <mallum@openedhand.com>
 
 	* configure.ac:
