Fix bad UTF8 in Settings.directory
git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@1217 b067294f-1dea-0310-9683-c47a78595994

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-27  mallum,,,  <mallum@openedhand.com>
+
+	* data/vfolders-pda/Settings.directory:
+	Fix bad UTF8 in Settings.directory
+
 2005-01-12  mallum,,,  <mallum@openedhand.com>
 
 	* configure.ac:
