2007-04-13  Matthew Allum  <mallum@openedhand.com>
        * data/vfolders-pda/Makefile.am:
        * data/vfolders-pda/PIM.directory:
        * data/vfolders-pda/Root.order:
        Add PIM directory (for matchbox-desktop-2)

git-svn-id: https://svn.o-hand.com/repos/matchbox/trunk/matchbox-common@1516 b067294f-1dea-0310-9683-c47a78595994

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-04-13  Matthew Allum  <mallum@openedhand.com>
+
+	* data/vfolders-pda/Makefile.am:
+	* data/vfolders-pda/PIM.directory:
+	* data/vfolders-pda/Root.order:
+	Add PIM directory (for matchbox-desktop-2)
+
 2005-09-27  mallum,,,  <mallum@openedhand.com>
 
 	* data/vfolders-pda/Settings.directory:
